--- a/static/custom.css
+++ b/static/custom.css
@@ -1,3 +1,7 @@
+html {
+	background-color: #fafafa;
+	box-sizing: border-box;
+}
 .fas {
     cursor: pointer;
 }
@@ -7,6 +11,9 @@
 }
 .small-icon > svg {
 	height: 16px;
+}
+.active > svg {
+	fill: blue;
 }
 
 .top-right > svg {
@@ -18,6 +25,7 @@
 .main-logo {
 	flex: 1;
 	width: 100%;
+	flex-basis: 200px;
 }
 .main-logo > svg {
 	width: 100%;
