--- a/static/custom.css
+++ b/static/custom.css
@@ -22,10 +22,11 @@ html {
 
 .main-logo {
 	flex: 1;
-	width: 100%;
 	flex-basis: 200px;
-}
-.main-logo > svg {
 	width: 100%;
 	height: 20em;
 }
+/* .main-logo > svg {
+	width: 100%;
+	height: 20em;
+} */
