--- a/static/custom.css
+++ b/static/custom.css
@@ -1,32 +1,3 @@
-html {
-	background-color: #f2faf1;
-	box-sizing: border-box;
+body {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-* {
-	box-sizing: border-box;
-}
-.small-icon > svg {
-	height: 16px;
-	box-sizing: content-box;
-	/* justify-self: end; */
-}
-.active > svg {
-	fill: blue;
-}
-
-.top-right > svg {
-	position: absolute;
-	top: 0;
-	right: 0;
-}
-
-.main-logo {
-	flex: 1;
-	flex-basis: 200px;
-	width: 100%;
-	height: 20em;
-}
-/* .main-logo > svg {
-	width: 100%;
-	height: 20em;
-} */
